# WutherCore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  ci.yml
crates/core-api/: Cargo.toml
crates/core-api/src/: compat.rs  compat_cache.rs  compat_security.rs  compat_ws.rs  native.rs  server.rs
crates/core-api/tests/: compat_smoke.rs
crates/core-capture/: Cargo.toml
crates/core-capture/src/: android_vpn_config.rs  dial_meta.rs  doctor.rs  eim_nat.rs  engine.rs  fakeip_dns.rs  frame_cache.rs  gc.rs  ipset.rs  lib.rs  nat.rs  net_monitor.rs  net_monitor_event.rs  netstack_dispatch.rs  packet.rs  route_table.rs  stack.rs  stack_system.rs  supervisor.rs  sys_proxy.rs  system_dispatch.rs  tcp_nat.rs  tproxy_rules.rs  tun_dispatch.rs  tun_inbound.rs  tun_io.rs  udp_forwarder.rs  udp_handle.rs  udp_session.rs  uid_filter.rs
crates/core-capture/tests/: dispatch_smoke.rs  host_pin_smoke.rs  packet_roundtrip.rs  splice_smoke.rs  stack_smoke.rs  sys_proxy_smoke.rs  udp_forwarder_e2e.rs
crates/core-config/src/: error.rs  loader.rs  model.rs  runtime_plan.rs
crates/core-feeds/: Cargo.toml
crates/core-feeds/src/: cache.rs  fetcher.rs  lib.rs  manager.rs  parser.rs  userinfo.rs
crates/core-fetch/: Cargo.toml
crates/core-fetch/src/: lib.rs
crates/core-inbound/src/: lib.rs  listener.rs  mixed.rs
crates/core-observe/: Cargo.toml
crates/core-observe/src/: connections.rs  copy_counted.rs  lib.rs  log_bus.rs  metrics.rs  tracing_init.rs  watchdog.rs
crates/core-outbound/: Cargo.toml
crates/core-outbound/src/: adapter.rs  block.rs  direct.rs  dns_hijack.rs  http.rs  lib.rs  loopback.rs  registry.rs  socks5.rs
crates/core-reality/: Cargo.toml
crates/core-resolver/: Cargo.toml
crates/core-ruleset/: Cargo.toml
crates/core-runtime/: Cargo.toml
crates/proxy-core/: Cargo.toml
docs/: LINUX-TUN-AUTO-REDIRECT.md  README.md  RELEASING.md
examples/: android.yaml
tests-e2e/tests/: e2e_mixed.rs  e2e_urltest.rs
(+137 files in other folders)
